Small serach fields refactoring (add lombok & style)
Signed-off-by: Marinov Avgustin <Avgustin.Marinov@bosch.com>