@@ -9,110 +9,57 @@
  */
 package org.eclipse.hawkbit.repository;
 
-import java.util.Arrays;
+import lombok.Getter;
+
 import java.util.Collections;
 import java.util.List;
 
 /**
  * Sort and search fields for actions.
  */
+@Getter
 public enum ActionFields implements FieldNameProvider, FieldValueConverter<ActionFields> {
 
-    /**
-     * The status field.
-     */
-    STATUS("active"),
-
-    /**
-     * The detailed action status
-     */
-    DETAILSTATUS("status"),
-    
-    /**
-     * The last action status code
-     */
-    LASTSTATUSCODE("lastActionStatusCode"),
-
-    /**
-     * The id field.
-     */
     ID("id"),
-
-    /**
-     * The weight field.
-     */
+    STATUS("active"),
+    DETAILSTATUS("status"),
+    LASTSTATUSCODE("lastActionStatusCode"),
     WEIGHT("weight"),
-
-    /**
-     * The target field
-     */
-    TARGET("target", TargetFields.ID.getFieldName(), TargetFields.NAME.getFieldName(),
+    TARGET("target",
+            TargetFields.ID.getFieldName(), TargetFields.NAME.getFieldName(),
             TargetFields.UPDATESTATUS.getFieldName(), TargetFields.IPADDRESS.getFieldName()),
-
-    /**
-     * The distribution set field
-     */
-    DISTRIBUTIONSET("distributionSet", DistributionSetFields.ID.getFieldName(),
+    DISTRIBUTIONSET("distributionSet",
+            DistributionSetFields.ID.getFieldName(),
             DistributionSetFields.NAME.getFieldName(), DistributionSetFields.VERSION.getFieldName(),
             DistributionSetFields.TYPE.getFieldName()),
-
-    /**
-     * The rollout field
-     */
     ROLLOUT("rollout", RolloutFields.ID.getFieldName(), RolloutFields.NAME.getFieldName()),
-
-    /**
-     * The rollout field
-     */
     ROLLOUTGROUP("rolloutGroup", RolloutGroupFields.ID.getFieldName(), RolloutGroupFields.NAME.getFieldName()),
-
-
-    /**
-     * The weight field.
-     */
     EXTERNALREF("externalRef");
 
     private static final String ACTIVE = "pending";
     private static final String INACTIVE = "finished";
 
     private final String fieldName;
+    private final List<String> subEntityAttributes;
 
-    private List<String> subEntityAttributes;
-
-    private ActionFields(final String fieldName) {
+    ActionFields(final String fieldName) {
         this.fieldName = fieldName;
         this.subEntityAttributes = Collections.emptyList();
     }
 
-    private ActionFields(final String fieldName, final String... subEntityAttributes) {
+    ActionFields(final String fieldName, final String... subEntityAttributes) {
         this.fieldName = fieldName;
-        this.subEntityAttributes = Arrays.asList(subEntityAttributes);
-    }
-
-    @Override
-    public List<String> getSubEntityAttributes() {
-        return subEntityAttributes;
-    }
-
-    @Override
-    public String getFieldName() {
-        return fieldName;
+        this.subEntityAttributes = List.of(subEntityAttributes);
     }
 
     @Override
     public Object convertValue(final ActionFields e, final String value) {
-        if (STATUS == e) {
-            return convertStatusValue(value);
-        }
-        return value;
+        return STATUS == e ? convertStatusValue(value) : value;
     }
 
     @Override
     public String[] possibleValues(final ActionFields e) {
-        if (STATUS == e) {
-            return new String[] { ACTIVE, INACTIVE };
-        }
-        return new String[0];
+        return STATUS == e ? new String[] { ACTIVE, INACTIVE } : new String[0];
     }
 
     private static Object convertStatusValue(final String value) {
